[package]
name = "advent-2020"
version = "0.1.0"
authors = ["Peter Burns <rictic@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
lazy_static = "1.4.0"
md5 = "0.7.0"
itertools = "0.9.0"
colored = "2"
smallvec = "1.5.0"
enum-map = "0.6.4"

[dev-dependencies]
pretty_assertions = "0.6.1"
